test_regress/t/t_param_store_bad.out
%Error: t/t_param_store_bad.v:12:31: Storing to parameter variable 'S' in a context that is determined only at runtime
   12 |       $value$plusargs("S=%s", S);   
      |                               ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
